# numap

./: .gitignore  CMakeLists.txt  Makefile  readme.md
cmake/: Findnumactl.cmake  Findpfm.cmake
examples/: .gitignore  CMakeLists.txt  Makefile  example.c  example2.c  mem-bdw-top.c  showevtinfo.c
include/: numap.h  numap_config.h.in
src/: .gitignore  CMakeLists.txt  Makefile  numap.c  numap_analyse.c
